# multiuse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: parquet_files.py
multiuse/datetimes/: __init__.py
multiuse/datetimes/native/: native_timestamps.py
multiuse/datetimes/strings/: identify_datetime_strings.py
multiuse/datetimes/strings/tests/: test_identify_datetime_strings.py
multiuse/export/: convert_to_pdf.py
multiuse/file_io/: parquet_io.py
multiuse/filepaths/: __init__.py  base_file_paths.py  find_classes_in_dir.py  find_project_root.py  system_utils.py
multiuse/imports/: __init__.py  lazy_loader_internal.py
multiuse/log_methods/: __init__.py  custom_logging_funcs.py  setup_logger.py
multiuse/model/: __init__.py  class_data_model.py  class_info_model.py  pretty_print_base_model.py
multiuse/pandas_lib/: column_funcs.py
multiuse/pandas_lib/schemas/: convert_to_schema.py
multiuse/polars_funcs/: __init__.py  display_output.py  polars_analysis_funcs.py  rich_highlight.py
multiuse/profiling/: pyinstrument_profiler.py
multiuse/scraping/: scraping_headers.py
multiuse/scraping/selenium_scraping/: __init__.py  selenium_scraping.py
multiuse/scraping/selenium_scraping/utils/: __init__.py  selenium_funcs.py  selenium_save_to_file.py  setup_selenium.py
multiuse/utils/: indexing.py
multiuse/validation/pandas_lib/: column_validation.py  null_values_utils.py  pandas_type_validation.py
multiuse/words/: rule_based_reductions.py
src/multiuse/export/: convert_to_pdf.py
src/multiuse/file_io/: parquet_io.py
src/multiuse/filepaths/: __init__.py  find_project_root.py
src/multiuse/polars_funcs/: __init__.py  display_output.py  parquet_utils.py  polars_analysis_funcs.py  rich_highlight.py
src/multiuse/profiling/: pyinstrument_profiler.py
src/multiuse/words/: rule_based_reductions.py
tests/multiuse/filepaths/: test_base_file_paths.py  test_find_project_root.py
tests/multiuse/model/: test_class_data_model.py
