[tool.poetry]
name = "multiuse"
version = "0.1.0"
description = "Shared tools for use across projects"
authors = ["Ed Powers <ed.a.powers@gmail.com>"]
readme = "README.md"
packages = [
    { include = "multiuse", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
tqdm = "^4.66.4"
python-dotenv = "^1.0.1"
pyarrow = "^16.1.0"
chardet = "^5.2.0"
astor = "^0.8.1"
pydantic = "^2.7.4"
selenium = "^4.22.0"
pre-commit = "^3.7.1"
pyhumps = "^3.8.0"
pyinstrument = "^4.6.2"
polars = "^1.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
pandas-stubs = "^2.2.2.240603"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"


[tool.poetry.group.expirimental.dependencies]
browsermob-proxy = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=multiuse --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
source = ["multiuse"]

[tool.coverage.report]
fail_under = 100
show_missing = true


[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B311"]


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = false
ensure_newline_before_comments = true
