[project]
name = "multiuse"
version = "0.1.6"
description = "Shared tools for use across projects"
authors = [
    {name = "Ed Powers", email = "ed.a.powers@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
    "pyinstrument>=4.6.2",
    "polars>=1.4.1",
    "reportlab>=4.4.4",
    "duckdb>=1.4.2",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "joblib>=1.5.3",
]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.24",
    "ruff>=0.8.0",
    "types-python-dateutil>=2.9.0.20240906",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

local = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"


[tool.ty]
[ty.rules]
possibly-unresolved-reference = "warn"
division-by-zero = "ignore"

[tool.ty.environment]
python = ".venv"


[tool.ruff]
# Same as Black.
line-length = 88
# Assume Python 3.12
target-version = "py312"

exclude = ["test_*.py", "__init__.py"]

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PD",  # pandas-vet
    "PL",  # pylint
    # "TRY", # tryceratops
    "PERF", # Perflint
]


lint.ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "FBT001",  # Boolean defaults in function args
    "FBT002",  # Boolean defaults in function args
    "FBT003",  # Boolean positional in function call.
    "BLE001", # Allow blind exceptions
    "DTZ007", # Allow datetime without timezone
    "PLR0913",  # Allow function args > 8
    "PLR0912", # Allow many branches
    "PLR0915",  # Allow many statements
    "S608", # Allow sql templates for duckdb
]

# Allow autofix behavior for specific rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["multiuse"]


[tool.pytest.ini_options]
addopts = "--cov=multiuse --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
